# tiny-logs

./: Cargo.toml  README.md
src/: lib.rs  syslog.rs
